lab7/redis/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-service
  namespace: lab7
spec:
  clusterIP: None
  selector:
    app: redis
  ports:
    - port: 6379
      targetPort: 6379
